// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Templates createV2 dispatches create template with passed in data 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": "<p>Hello world</p>",
          "reply_to": undefined,
          "text": undefined,
        },
        "id": "my-id",
        "shared_with_subaccounts": true,
      },
      "headers": Object {
        "x-msys-subaccount": 123,
      },
      "method": "POST",
      "url": "/v1/templates",
    },
    "type": "CREATE_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates deleteTemplateV2 dispatches delete template with the passed in ID and subaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "DELETE",
      "url": "/v1/templates/undefined",
    },
    "type": "DELETE_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates getTestData should handle old test data 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {},
      "options": Object {},
      "substitution_data": Object {
        "test": "test",
      },
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates getTestData should handle partial test data combo 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {},
      "options": Object {
        "sandbox": true,
      },
      "substitution_data": Object {
        "test": "test",
      },
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates getTestData should handle partial test data metadata only 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {
        "flavour": "vanilla",
      },
      "options": Object {},
      "substitution_data": Object {},
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates getTestData should handle partial test data options only 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {},
      "options": Object {
        "sandbox": true,
      },
      "substitution_data": Object {},
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates getTestData should handle partial test data substitution_data only 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {},
      "options": Object {},
      "substitution_data": Object {
        "test": "test",
      },
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates publishV2 dispatches the publish action with passed in data 1`] = `
Array [
  Object {
    "type": "PUBLISH_ACTION_PENDING",
  },
  Object {
    "meta": Object {
      "context": Object {
        "id": "foo",
      },
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "reply_to": undefined,
          "text": undefined,
        },
      },
      "headers": Object {
        "x-msys-subaccount": 123,
      },
      "method": "PUT",
      "params": Object {},
      "url": "/v1/templates/foo",
    },
    "type": "UPDATE_TEMPLATE",
  },
  Object {
    "type": "SET_TEMPLATE_TEST_DATA",
  },
  Object {
    "meta": Object {
      "data": Object {
        "id": "foo",
        "published": true,
        "testData": Object {
          "metadata": Object {},
          "options": Object {},
          "substitution_data": Object {
            "hello": "world",
          },
        },
      },
      "headers": Object {
        "x-msys-subaccount": 123,
      },
      "method": "PUT",
      "url": "/v1/templates/foo",
    },
    "type": "PUBLISH_TEMPLATE",
  },
  Object {
    "type": "PUBLISH_ACTION_SUCCESS",
  },
]
`;

exports[`Action Creator: Templates should dispatch a create action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "reply_to": undefined,
          "text": undefined,
        },
        "form": "data",
        "id": "id",
        "shared_with_subaccounts": false,
      },
      "headers": Object {},
      "method": "POST",
      "url": "/v1/templates",
    },
    "type": "CREATE_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates should dispatch a delete action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "DELETE",
      "url": "/v1/templates/three",
    },
    "type": "DELETE_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates should dispatch a get draft action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "url": "/v1/templates/one",
    },
    "type": "GET_DRAFT_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates should dispatch a get published action 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "draft": false,
      },
      "showErrorAlert": false,
      "url": "/v1/templates/two",
    },
    "type": "GET_PUBLISHED_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates should dispatch a getPreview action 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": "test-template",
        "mode": "draft",
      },
      "data": Object {
        "content": Object {
          "html": "<h1>Test Draft</h1>",
          "subject": "Test Draft",
        },
        "substitution_data": Object {},
      },
      "headers": Object {},
      "method": "POST",
      "showErrorAlert": false,
      "url": "/v1/utils/content-previewer",
    },
    "type": "GET_TEMPLATE_PREVIEW",
  },
]
`;

exports[`Action Creator: Templates should dispatch a getTestData action 1`] = `
Array [
  Object {
    "payload": Object {
      "metadata": Object {},
      "options": Object {},
      "substitution_data": Object {
        "test": "test",
      },
    },
    "type": "GET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates should dispatch a list action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/v1/templates",
    },
    "type": "LIST_TEMPLATES",
  },
]
`;

exports[`Action Creator: Templates should dispatch a publish action 1`] = `
Array [
  Object {
    "type": "PUBLISH_ACTION_PENDING",
  },
  [Function],
  [Function],
  Object {
    "meta": Object {
      "data": Object {
        "form": "data",
        "id": "id",
        "published": true,
        "testData": Object {
          "test": "data",
        },
      },
      "headers": Object {},
      "method": "PUT",
      "url": "/v1/templates/id",
    },
    "type": "PUBLISH_TEMPLATE",
  },
  Object {
    "type": "PUBLISH_ACTION_SUCCESS",
  },
]
`;

exports[`Action Creator: Templates should dispatch a setTestData action 1`] = `
Array [
  Object {
    "type": "SET_TEMPLATE_TEST_DATA",
  },
]
`;

exports[`Action Creator: Templates should dispatch an update action 1`] = `
Array [
  [Function],
  Object {
    "meta": Object {
      "context": Object {
        "id": "id",
      },
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": undefined,
          "reply_to": undefined,
          "text": undefined,
        },
        "form": "data",
      },
      "headers": Object {},
      "method": "PUT",
      "params": Object {},
      "url": "/v1/templates/id",
    },
    "type": "UPDATE_TEMPLATE",
  },
]
`;

exports[`Action Creator: Templates should dispatch getDraft, getTestData, and getPreview actions 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "url": "/v1/templates/test-template",
    },
    "type": "GET_DRAFT_TEMPLATE",
  },
  Object {
    "payload": undefined,
    "type": "GET_TEMPLATE_TEST_DATA",
  },
  Object {
    "meta": Object {
      "context": Object {
        "id": "test-template",
        "mode": "draft",
      },
      "data": Object {
        "content": undefined,
        "substitution_data": Object {},
      },
      "headers": Object {},
      "method": "POST",
      "showErrorAlert": false,
      "url": "/v1/utils/content-previewer",
    },
    "type": "GET_TEMPLATE_PREVIEW",
  },
]
`;

exports[`Action Creator: Templates should dispatch getPublished, getTestData, and getPreview actions 1`] = `
Array [
  Object {
    "meta": Object {
      "headers": Object {},
      "method": "GET",
      "params": Object {
        "draft": false,
      },
      "showErrorAlert": false,
      "url": "/v1/templates/test-template",
    },
    "type": "GET_PUBLISHED_TEMPLATE",
  },
  Object {
    "payload": undefined,
    "type": "GET_TEMPLATE_TEST_DATA",
  },
  Object {
    "meta": Object {
      "context": Object {
        "id": "test-template",
        "mode": "published",
      },
      "data": Object {
        "content": undefined,
        "substitution_data": Object {},
      },
      "headers": Object {},
      "method": "POST",
      "showErrorAlert": false,
      "url": "/v1/utils/content-previewer",
    },
    "type": "GET_TEMPLATE_PREVIEW",
  },
]
`;

exports[`Action Creator: Templates should dispatch getTestData and sendPreview actions 1`] = `
Array [
  Object {
    "payload": undefined,
    "type": "GET_TEMPLATE_TEST_DATA",
  },
  Object {
    "meta": Object {
      "data": Object {
        "content": Object {
          "template_id": "test-template",
          "use_draft_template": true,
        },
        "options": Object {
          "sandbox": true,
        },
        "recipients": Array [
          Object {
            "address": Object {
              "email": "test@example.com",
            },
          },
        ],
      },
      "headers": Object {},
      "method": "POST",
      "url": "/v1/transmissions",
    },
    "type": "SEND_PREVIEW_TRANSMISSION",
  },
]
`;

exports[`Action Creator: Templates updateV2 dispatches update template with passed in data 1`] = `
Array [
  Object {
    "meta": Object {
      "context": Object {
        "id": "my-new-id",
      },
      "data": Object {
        "content": Object {
          "amp_html": undefined,
          "html": "<p>My new content.</p>",
          "reply_to": undefined,
          "text": undefined,
        },
      },
      "headers": Object {},
      "method": "PUT",
      "params": Object {},
      "url": "/v1/templates/my-new-id",
    },
    "type": "UPDATE_TEMPLATE",
  },
]
`;
